--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>RUPAM DHARA</h1>
+    <ol>
+        <li><a href="task1.html"></a>task1</li>
+        <li><a href="task2.html"></a>task2</li>
+        <li><a href="task3.html"></a>task3</li>
+        <li><a href="task4.html"></a>task4</li>
+        <li><a href="task5.html"></a>task5</li>
+    </ol>
 </body>
 </html>
